--- a/onboarding/templates/base.html
+++ b/onboarding/templates/base.html
@@ -1,24 +1,51 @@
-<!DOCTYPE html>
+{% load static %}
+<!doctype html>
 <html lang="en">
-<head>
-  {% block title %}<title>Local Library</title>{% endblock %}
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-  <!-- Add additional CSS in static file -->
-  {% load static %}
-  <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %}"> -->
-</head>
-<body>
-  <div class="h-screen bg-gray-100">
-    <div class="flex h-full">
-      <div class="w-1/2 bg-gray-50 rounded mx-2 my-4 z-50">
-      {% block illustrator %}
-            Svg Section
-      {% endblock %}
-      </div>
-      <div class="w-1/2 bg-gray-50 rounded mx-2 my-4 z-50">{% block content %}{% endblock %}</div>
-    </div>
-  </div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>{% block title %}{%endblock %}</title>
+    <meta name="author" content="LanSan Technology">
+    <link rel="canonical" href="{{request.path}}"/>
+
+    <meta name="description" content="{% block description %}{% endblock %}">
+    <meta name="keywords" content="{% block keywords %}{% endblock %}">
+
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/icon.jpg' %}">
+    <link rel="apple-touch-icon" type="image/jpg" href="{% static 'images/icon.jpg' %}"> -->
+
+    <!-- ================================
+    Start CSS
+    ================================= -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.css">
+    <link href="{% static 'css/app.css' %}" rel="stylesheet">
+    {% block extend_header%}{%endblock%}
+    <!-- ================================
+    End CSS
+    ================================= -->
+
+  </head>
+  <body>
+    {% include 'partials/messages.html' %}
+    {% include 'partials/nav.html' %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% include 'partials/footer.html' %}
+
+    <!-- ================================
+    Start Scripts
+    ================================= -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/swiper@7.0.5/swiper-bundle.min.js"></script>
+    <script src="{% static 'js/onboarding.js' %}"></script>
+    {% block extend_footer %}{%endblock%}
+    <!-- ================================
+    End Scripts
+    ================================= -->
+  </body>
 </html>
