--- a/static/css/app.css
+++ b/static/css/app.css
@@ -5,108 +5,263 @@
   margin: 0;
   box-sizing: border-box;
 }
-body {
-  font-family: "Poppins", sans-serif;
-}
 
 :root {
-  --bg-color: #000811;
-  --primary-color: #ec5656;
-  --border-radius: 6px;
-  --color: #dcdfe4;
+  --primaryColor: #9C07B6;
+  --primaryDarkColor: #3D0048;
+  --primaryHoverColor: #900AA8;
+  --secondaryColor: #F9B000;
+  --baseColor: #21243D;
+  --baseFont: 'Heebo', sans-serif;
+  --titleFont: 'Courier Prime', monospace;
+  --regular: 400;
+  --medium: 500;
+  --bold: 700;
+  --black: 900;
+  --lightBg: #F1F1F1;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
-  background-color: #f4f4f4;
-  overflow-x: hidden;
+  font-family: var(--baseFont);
+  color: var(--baseColor);
+  line-height: normal;
 }
-.navbar {
-  background-color: var(--primary-color);
-  overflow: hidden;
-  height: 63px;
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+img {
+  max-width: 100%;
+}
+a {
+  color: inherit;
+}
+a:hover {
+  color: var(--primaryDarkColor);
+}
+a, .btn {
+  -webkit-transition: all 300ms ease-in-out 0s;
+  -o-transition: all 300ms ease-in-out 0s;
+  transition: all 300ms ease-in-out 0s;
   text-decoration: none;
-  font-size: 17px;
 }
-.navbar ul {
-  margin: 8px 0 0 0;
-  list-style: none;
+.btn:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
-.navbar a:hover {
-  background-color: #ddd;
-  color: #000;
+
+.primaryColor {
+  color: var(--primaryColor);
 }
-.side-nav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  opacity: 0.9;
-  overflow-x: hidden;
-  padding-top: 60px;
-  transition: 0.5s;
+.primaryDarkColor {
+  color: var(--primaryDarkColor);
 }
-.side-nav a {
-  padding: 10px 10px 10px 30px;
-  text-decoration: none;
+.lightBg {
+  background-color: var(--lightBg);
+}
+
+.btn {
+  font-size: 20px;
+  font-weight: var(--medium);
+  padding: 8px 20px;
+  border-radius: 2px;
+}
+.btnPrimary {
+  background-color: var(--primaryColor);
+  color: var(--bs-white);
+}
+.btnPrimary:hover {
+  background-color: var(--primaryDarkColor);
+  color: var(--bs-white);
+}
+.btnOutline {
+	border: 1px solid var(--primaryDarkColor);
+	color: var(--primaryDarkColor);
+}
+.btnOutline:hover {
+	border: 1px solid var(--primaryDarkColor);
+  background-color: var(--primaryDarkColor);
+	color: var(--bs-white);
+}
+.btn:focus {
+  outline: none;
+}
+
+
+/* titles */
+.xlTitle {
+  font-size: 44px;
+  line-height: 1.3;
+  font-weight: var(--bold);
+  font-family: var(--titleFont)
+}
+.lgTitle {
+  font-size: 30px;
+  line-height: normal;
+  font-weight: var(--bold);
+  font-family: var(--titleFont)
+}
+.mdTitle {
+  font-size: 26px;
+  line-height: normal;
+  font-weight: var(--bold);
+  font-family: var(--titleFont)
+}
+.smTitle {
   font-size: 22px;
-  color: #ccc;
-  display: block;
-  transition: 0.3s;
+  line-height: normal;
+  font-weight: var(--regular);
+  font-family: var(--titleFont)
 }
-.side-nav a:hover {
-  color: #fff;
+.smText {
+  font-size: 22px;
 }
-.side-nav .btn-close {
+.xsTitle {
+  font-size: 18px;
+  line-height: normal;
+}
+
+.regular {
+  font-weight: var(--regular);
+}
+.medium {
+  font-weight: var(--medium);
+}
+.bold {
+  font-weight: var(--bold);
+}
+.black {
+  font-weight: var(--black);
+}
+
+
+.headerCol {
+  background-color: var(--bs-white);
+	padding: 18px 0;
+	-webkit-transition: all 300ms ease-in-out 0s;
+	-o-transition: all 300ms ease-in-out 0s;
+	transition: all 300ms ease-in-out 0s;
+	position: fixed;
+  z-index: 99;
+	left: 0;
+	right: 0;
+	top: 0;
+}
+.fixedHeader .headerCol {
+	padding: 10px 0;
+	-webkit-box-shadow: 0 0 24px rgba(0,0,0,0.1);
+  box-shadow: 0 0 24px rgba(0,0,0,0.1);
+}
+
+
+/* navigation */
+.navCol {
+	text-align: right;
+}
+.navCol a {
+	font-size: 20px;
+	color: #000;
+  font-weight: var(--medium);
+  display: inline-block;
+  position: relative;
+}
+.navCol a:hover {
+  color: var(--primaryColor);
+}
+.navCol a::before {
+  content: "";
   position: absolute;
-  top: 0;
-  right: 22px;
-  font-size: 36px;
-  margin-left: 50px;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  height: 2px;
+  border-radius: 2px;
+  background-color: var(--primaryColor);
+  -webkit-transition: all 500ms ease-in-out 0s;
+  -o-transition: all 500ms ease-in-out 0s;
+  transition: all 500ms ease-in-out 0s;
+  opacity: 0;
+}
+.navCol a.active::before {
+  opacity: 1;
+  width: 27px;
+  right: auto;
+  left: 0;
+}
+.navCol a:hover::before {
+  opacity: 1;
+  left: 0;
+  right: 0;
+}
+.navCol a.active {
+  color: var(--primaryColor);
+}
+.navCol li {
+	display: inline-block;
+}
+.navCol li + li {
+  padding-left: 32px;
+}
+/*   /navigation */
+
+
+/* nav toggle */
+.navToggle {
+	display: block;
+	padding: 15px 12px;
+	width: 18px;
+	height: 2px;
+	box-sizing: content-box;
+	background-clip: content-box;
+	-webkit-transition: background-color 500ms ease-in-out 250ms;
+  -o-transition: background-color 500ms ease-in-out 250ms;
+  transition: background-color 500ms ease-in-out 250ms;
+	background-color: #000;
+	border: 1px solid rgba(0,0,0,0.2);
+  margin-left: auto;
+}
+.navToggle:hover {
+  cursor: pointer;
+}
+.navToggle:before, .navToggle:after {
+  position: relative;
+  content: "";
+  display: block;
+  width: 18px;
+  height: 2px;
+  background-color: #000;
+  -webkit-transition: transform 500ms ease-in-out;
+  -o-transition: transform 500ms ease-in-out;
+  transition: transform 500ms ease-in-out;
+}
+.navToggle:before {
+  top: -6px;
+}
+.navToggle:after {
+  bottom: -4px;
+}
+.navToggle__text {
+  display: none;
+}
+.navToggleActive .navToggle {
+  background-color: rgba(255, 255, 255, 0);
+  transition-delay: 0s;
+}
+.navToggleActive .navToggle:before {
+  -webkit-transform: translateY(6px) rotate(-225deg);
+  -ms-transform: translateY(6px) rotate(-225deg);
+  transform: translateY(6px) rotate(-225deg);
+}
+.navToggleActive .navToggle:after {
+  -webkit-transform: translateY(-6px) rotate(225deg);
+  -ms-transform: translateY(-6px) rotate(225deg);
+  transform: translateY(-6px) rotate(225deg);
 }
 
-@media (max-width: 568px) {
-  .navbar-nav {
-    display: none;
-  }
+
+.bannerSection {
+	padding: 180px 0 80px;
 }
-
-
-.main {
-  transition: margin-left 0.5s;
-  padding: 20px;
-  overflow: hidden;
-  width: 80%;
-  margin: 0 auto;
-}
-
-.main__list {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-gap: 5px;
-  }
-
-.main__list__item{
-    display: grid;
-    grid-template-columns: 25% 50% 25%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    place-content: start space-evenly;
-}
-
-.main__list__item:nth-child(odd) { background: #f7f7f7; }
-
-@media (max-width: 380px) {
-    .list__item {
-      grid-template-rows: 100%;
-    }
-  }
